--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/harmonic/inertiatable",
     "keywords": ["Laravel", "inertiajs", "inertia", "InertiaTable"],
     "require": {
-        "illuminate/support": "~5 || ~6",
+        "illuminate/support": "^6.0|^7.0|^8.0",
         "inertiajs/inertia-laravel": "^0.2.0",
         "reinink/remember-query-strings": "^0.1.0",
         "symfony/process": "^4.3"
